syntax = "proto3";
package snapchat.friending;
option optimize_for = CODE_SIZE;
option objc_class_prefix = "SCFriending";
option csharp_namespace = "SnapProto.Snapchat.Friending";

import "com/snapchat/atlas/proto/SCAtlasOutgoingFriends.proto";
import "snapchat/core/SCCOREUuid.proto";

message SCFriendingFriendActionFailure {
    .snapchat.core.SCCOREUUID friendId = 1;
    .snapchat.friending.SCFriendingFriendActionFailure.SCFriendingFriendActionFailure_FailureReason reason = 2;
    enum SCFriendingFriendActionFailure_FailureReason {
        SCFriendingFriendActionFailure_FailureReason_Error = 0;
        SCFriendingFriendActionFailure_FailureReason_ErrorTryAgain = 1;
        SCFriendingFriendActionFailure_FailureReason_ErrorFriendNotFound = 2;
        SCFriendingFriendActionFailure_FailureReason_ErrorNotFriend = 3;
        SCFriendingFriendActionFailure_FailureReason_ErrorWithoutMessage = 4;
        SCFriendingFriendActionFailure_FailureReason_ErrorServer = 5;
        SCFriendingFriendActionFailure_FailureReason_ErrorInvalidParam = 6;
        SCFriendingFriendActionFailure_FailureReason_ErrorNoPermission = 7;
        SCFriendingFriendActionFailure_FailureReason_AddDeactivatedAccount = 10;
        SCFriendingFriendActionFailure_FailureReason_AddReachLimit = 11;
        SCFriendingFriendActionFailure_FailureReason_AddExistingFriend = 12;
        SCFriendingFriendActionFailure_FailureReason_AddRateLimitedMinuteOrHour = 13;
        SCFriendingFriendActionFailure_FailureReason_AddRateLimitedDay = 14;
        SCFriendingFriendActionFailure_FailureReason_AddRateLimitedWeekOrMonth = 15;
        SCFriendingFriendActionFailure_FailureReason_RemoveSelf = 20;
        SCFriendingFriendActionFailure_FailureReason_BlockSelf = 31;
        SCFriendingFriendActionFailure_FailureReason_DisplayEmpty = 60;
    }
}

message SCFriendingFriendAddParam {
    .snapchat.core.SCCOREUUID friendId = 1;
    .snapchat.friending.SCFriendingFriendAddParam.SCFriendingAddSource source = 2;
    string suggestionToken = 3;
    string displayName = 4;
    string snapId = 5;
    string compositeStoryId = 6;
    enum SCFriendingAddSource {
        SCFriendingAddSource_AddedByUnknown = 0;
        SCFriendingAddSource_AddedByPhone = 1;
        SCFriendingAddSource_AddedByUsername = 2;
        SCFriendingAddSource_AddedByQrCode = 3;
        SCFriendingAddSource_AddedByAddedMeBack = 4;
        SCFriendingAddSource_AddedByNearby = 5;
        SCFriendingAddSource_AddedBySuggested = 6;
        SCFriendingAddSource_AddedByOfficialStorySearch = 7;
        SCFriendingAddSource_AddedByDeepLink = 8;
        SCFriendingAddSource_AddedByInvite = 9;
        SCFriendingAddSource_AddedByStoryChrome = 10;
        SCFriendingAddSource_AddedBySharedUsername = 11;
        SCFriendingAddSource_AddedBySharedStory = 12;
        SCFriendingAddSource_AddedByGroupChat = 13;
        SCFriendingAddSource_AddedByShazam = 14;
        SCFriendingAddSource_AddedByMob = 15;
        SCFriendingAddSource_AddedByFeaturedOfficialStory = 16;
        SCFriendingAddSource_AddedFromOurStory = 17;
        SCFriendingAddSource_AddedByInfluencerRecommendation = 18;
        SCFriendingAddSource_AddedByTest = 20;
        SCFriendingAddSource_AddedByMention = 21;
        SCFriendingAddSource_AddedBySubscription = 22;
        SCFriendingAddSource_AddedByMentionSticker = 23;
        SCFriendingAddSource_AddedBySnapcodeSticker = 24;
        SCFriendingAddSource_AddedFromSpotlight = 25;
        SCFriendingAddSource_AddedFromPublicProfile = 26;
        SCFriendingAddSource_AddedFromLens = 27;
        SCFriendingAddSource_AddedByChat = 28;
        SCFriendingAddSource_AddedBySnapAnyone = 29;
        SCFriendingAddSource_AddedByCommunity = 30;
        SCFriendingAddSource_AddedByDisplayName = 198;
    }
}

message SCFriendingFriendBlockParam {
    .snapchat.core.SCCOREUUID friendId = 1;
}

message SCFriendingFriendDisplayNameParam {
    .snapchat.core.SCCOREUUID friendId = 1;
    string displayName = 2;
}

message SCFriendingFriendIgnoreParam {
    .snapchat.core.SCCOREUUID friendId = 1;
}

message SCFriendingFriendInviteOrAddByPhoneParam {
    repeated string countryCodeArray = 1;
    string rawPhoneNumber = 2;
    string displayName = 3;
}

message SCFriendingFriendInviteParam {
    .snapchat.core.SCCOREUUID friendId = 1;
    string displayName = 2;
}

message SCFriendingFriendRemoveParam {
    .snapchat.core.SCCOREUUID friendId = 1;
    string snapId = 2;
    string compositeStoryId = 3;
}

message SCFriendingFriendUnblockParam {
    .snapchat.core.SCCOREUUID friendId = 1;
}

message SCFriendingFriendsActionResponse {
    repeated .com.snapchat.atlas.proto.SCAtlasOutgoingFriend successesArray = 1;
    repeated .snapchat.friending.SCFriendingFriendActionFailure failuresArray = 2;
    string message = 3;
}

message SCFriendingFriendsAddRequest {
    string page = 1;
    repeated .snapchat.friending.SCFriendingFriendAddParam paramsArray = 2;
}

message SCFriendingFriendsBlockRequest {
    repeated .snapchat.friending.SCFriendingFriendBlockParam paramsArray = 1;
}

message SCFriendingFriendsDisplayNameChangeRequest {
    repeated .snapchat.friending.SCFriendingFriendDisplayNameParam paramsArray = 1;
}

message SCFriendingFriendsIgnoreRequest {
    repeated .snapchat.friending.SCFriendingFriendIgnoreParam paramsArray = 1;
}

message SCFriendingFriendsInviteOrAddByPhoneRequest {
    string page = 1;
    repeated .snapchat.friending.SCFriendingFriendInviteOrAddByPhoneParam paramsArray = 2;
    .snapchat.friending.SCFriendingFriendsInviteOrAddByPhoneRequest.SCFriendingFriendsInviteOrAddByPhoneRequest_Source source = 3;
    enum SCFriendingFriendsInviteOrAddByPhoneRequest_Source {
        SCFriendingFriendsInviteOrAddByPhoneRequest_Source_Unknown = 0;
        SCFriendingFriendsInviteOrAddByPhoneRequest_Source_Registration = 1;
        SCFriendingFriendsInviteOrAddByPhoneRequest_Source_AllContacts = 2;
        SCFriendingFriendsInviteOrAddByPhoneRequest_Source_FriendFeed = 3;
        SCFriendingFriendsInviteOrAddByPhoneRequest_Source_AddFriends = 4;
        SCFriendingFriendsInviteOrAddByPhoneRequest_Source_UniversalSearch = 5;
        SCFriendingFriendsInviteOrAddByPhoneRequest_Source_InviteFriendsPage = 6;
    }
}

message SCFriendingFriendsInviteRequest {
    repeated .snapchat.friending.SCFriendingFriendInviteParam paramsArray = 1;
}

message SCFriendingFriendsMuteStoryParam {
    .snapchat.core.SCCOREUUID friendId = 1;
}

message SCFriendingFriendsMuteStoryRequest {
    repeated .snapchat.friending.SCFriendingFriendsMuteStoryParam paramsArray = 1;
}

message SCFriendingFriendsRemoveRequest {
    repeated .snapchat.friending.SCFriendingFriendRemoveParam paramsArray = 1;
}

message SCFriendingFriendsTransferInvitesRequest {
    .snapchat.core.SCCOREUUID fromTemporaryUserId = 1;
    .snapchat.core.SCCOREUUID toUserId = 2;
}

message SCFriendingFriendsTransferInvitesResponse {
}

message SCFriendingFriendsUnblockRequest {
    repeated .snapchat.friending.SCFriendingFriendUnblockParam paramsArray = 1;
}

message SCFriendingFriendsUnmuteStoryParam {
    .snapchat.core.SCCOREUUID friendId = 1;
}

message SCFriendingFriendsUnmuteStoryRequest {
    repeated .snapchat.friending.SCFriendingFriendsUnmuteStoryParam paramsArray = 1;
}